# cicd-python

./: .editorconfig  .gitignore  README.md  cli.py  commitlint.config.js  lefthook.yml  package.json  pyproject.toml  venv.sh
.github/workflows/: gitleaks.yaml  tests.yaml
cicd/: Abstracts.py  CICD.py  GitOps.py  GitOpsDataClasses.py  Utils.py
fixtures/: gitops.json  gitops.yaml
tests/: Fixtures.py  test_Abstracts.py  test_Dataclasses.py  test_GitOps.py
